# final_year_project

./: .gitignore  LICENSE  Notes.txt  README.md  db.sql  db_backup.dump
.github/workflows/: rust.yml
BERT_Training/: BERT_Training.ipynb
Examples/: app.frontend.js
backend/: Cargo.toml
backend/src/: email.rs  fake_news_detector.rs  lib.rs  main.rs  post.rs  t_main.rs
backend/src/handlers/: auth.rs  comments.rs  friends.rs  mod.rs  posts.rs  user.rs
backend/src/models/: admin_model.rs  comment_model.rs  friend_model.rs  member_model.rs  mod.rs  password_reset_token_model.rs  post_model.rs  user_model.rs
backend/tests/: integration_tests.rs  member_tests.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js  Component.js  Counter.js  Footer.js  Friends.css  Friends.js  Header.css  Header.js  HomePage.css  HomePage.js  Login.css  Login.js  Logout.js  Post.css  Post.js  PostDetail.css  Registration.css  UserDetail.css  UserDetail.js  index.css
frontend/src/assets/styles/: CommentSection.css  Footer.css  ForgotPassword.css  Header.css  HomePage.css  Login.css  PostDetail.css  Profile.css  Registration.css  ResetPassword.css  UpdatePassword.css  UpdatePost.css  UpdateProfile.css
frontend/src/components/: CommentSection.js  Footer.js  ForgotPassword.js  Friends.js  Header.js  HomePage.js  Login.js  Logout.js  Post.js  PostDetail.js  Profile.js  Register.js  Registration.js  ResetPassword.js  UpdatePassword.js  UpdatePost.js  UpdateProfile.js  UserDetail.js
frontend/src/services/: api.js
frontend/src/utils/: passwordUtils.js
