[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.0"
bcrypt = "0.15.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
ndarray = "0.15.1"
onnxruntime = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres"] }
tokenizers = "0.19.1"
uuid = {version = "1.9.1", features = ["v4"]}
