[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-redis = "0.13.0"
actix-rt = "2.10.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
ndarray = "0.15.1"
onnxruntime = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "runtime-tokio-rustls", "macros", "time", "chrono"] }
tokenizers = "0.19.1"
tokio = { version = "1.38", features = ["full"] }
uuid = {version = "1.9.1", features = ["v4"]}
lettre = { version = "0.10", features = ["smtp-transport"] }

[dev-dependencies]
actix-http = "3"

[lib]
name = "backend"
path = "src/lib.rs"
